# government-service/src/main/java/com/csaba79coder/bestprotocol/model/representative/persistence/RepresentativeRepository.java
@@ -2,6 +2,7 @@ package com.csaba79coder.bestprotocol.model.representative.persistence;
 
 import com.csaba79coder.bestprotocol.model.representative.entity.Representative;
 import org.springframework.data.jpa.repository.JpaRepository;
+import org.springframework.data.repository.query.Param;
 import org.springframework.stereotype.Repository;
 
 import java.util.List;
@@ -9,5 +10,7 @@ import java.util.UUID;
 
 @Repository
 public interface RepresentativeRepository extends JpaRepository<Representative, UUID> {
-    List<Representative> findRepresentativeByGovernmentId(Long id);
+    // List<RepresentativeAdminModel> findRepresentativeByGovernmentId(Long id);
+    // Page<RepresentativeAdminModel> findByGovernmentId(@Param("government_id") Long governmentId, Pageable pageable);
+    List<Representative> findRepresentativeByGovernmentId(@Param("government_id") Long governmentId);
 }
